set up routes for pages, aliased Users

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,10 @@
 {% block content %}
   <h3>Pages</h3>
   <hr>
-  <ul class="list-unstyled">
-    <!-- PLACEHOLDER LIST OF PAGES -->
-  </ul>
+
+    {% for page in pages %}
+    <ul class="list-unstyled">
+        <li><a href="#">{{page.title}}</a></li>
+      {% endfor %}
+    </ul>
 {% endblock %}
