--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -2,10 +2,10 @@
 
 {% block content %}
   <h3>{{ page.title }}<small> (<a href= {{page.urlTitle}} + "/similar">Similar</a>)</small></h3>
-  <h4>by <a href="PLACEHOLDER-AUTHOR-URL">Author name placeholder</a></h4>
+  <h4>by <a href="PLACEHOLDER-AUTHOR-URL">{{page.authorId.name}}</a></h4>
   <div>PLACEHOLDER TAG LIST</div>
   <hr/>
-  <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
+  <div>Link to {{author.name}}'s page.</div>
   <div class="page-body">{{page.content}}</div>
   <hr/>
   <a href= {{page.urlTitle}} + "/edit" class="btn btn-primary">edit this page</a>
