--- a/views/addpage.html
+++ b/views/addpage.html
@@ -4,45 +4,49 @@
   <h3>Add a Page</h3>
   <hr>
   <form action="/wiki/" method="POST">
-    
+
     <div>
       <label for="name" class="col-sm-2 control-label">Author Name</label>
       <div class="col-sm-10">
         <input name="name" type="text" class="form-control"/>
       </div>
     </div>
-    
+
     <div>
       <label for="email" class="col-sm-2 control-label">Email</label>
       <div class="col-sm-10">
         <input name="email" type="text" class="form-control"/>
       </div>
     </div>
-    
+
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">Page Title</label>
       <div class="col-sm-10">
         <input name="title" type="text" class="form-control"/>
       </div>
     </div>
-    
+
     <div>
       <label for="content" class="col-sm-2 control-label">Content</label>
       <div class="col-sm-10">
         <input name="content" type="text" class="form-control"/>
       </div>
     </div>
-    
+
     <div>
       <label for="status" class="col-sm-2 control-label">Status</label>
       <div class="col-sm-10">
-        <input name="status" type="enum" class="form-control"/>
+        <select name="status">
+          <option value="Open"></option>
+          <option value="Closed"></option>
+        </select>
+        <!-- <input name="status" type="enum" class="form-control"/> -->
       </div>
     </div>
 
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
     </div>
-  
+
   </form>
 {% endblock %}
