--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -1,13 +1,20 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h3>{{ page.title }}<small> (<a href= {{page.urlTitle}} + "/similar">Similar</a>)</small></h3>
+
+  <h3>{{ page.title }}<small> (<a href="{{page.urlTitle}}/similar">Similar</a>)</small></h3>
+
   <h4>by <a href="PLACEHOLDER-AUTHOR-URL">{{page.authorId.name}}</a></h4>
+
   <div>PLACEHOLDER TAG LIST</div>
   <hr/>
-  <div>Link to {{author.name}}'s page.</div>
+
+  <div>{{author.name}}</div>
+
   <div class="page-body">{{page.content}}</div>
   <hr/>
-  <a href= {{page.urlTitle}} + "/edit" class="btn btn-primary">edit this page</a>
-  <a href= {{page.urlTitle}} + "/delete" class="btn btn-danger">delete this page</a>
+
+  <a href="{{page.urlTitle}}/edit" class="btn btn-primary">edit this page</a>
+  <a href="{{page.urlTitle}}/delete" class="btn btn-danger">delete this page</a>
+
 {% endblock %}
